# asgard

./: .gitattributes  .gitignore  Cargo.toml  lerna.json  package.json  readme.md
launcher/: Cargo.toml  package.json  tauri.conf.json
launcher/icons/: icon.icns
launcher/src/: main.rs
