[package]
name = "asgard"
version = "0.0.0"
description = "Rednight launcher"
authors = ["Dmitriy Chukhno <dmitr1sdadaya@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-unmaximize", "window-start-dragging", "window-unminimize", "window-maximize", "window-minimize", "window-hide", "window-close", "window-show", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
